# model/housekeeping.go
@@ -1,6 +1,7 @@
 package model
 
 import (
+	"github.com/pkg/errors"
 	"graduationproject/util"
 )
 
@@ -31,9 +32,17 @@ func AddHouseKeeping(keeping HouseKeeping) (err error) {
 func GetAllHouseKeeping() (data []HouseKeeping, err error) {
 	err = util.Db.Find(&data).Error
 	if err != nil {
-		return
+		return data, errors.Wrap(err, "GetAllHouseKeepingFail")
 	}
 	return
+}
+
+func EditHouseKeepingStatus(id int) (err error) {
+	err = util.Db.Table("t_house_keeping").Where("id=?", id).Update("status", "已处理").Error
+	if err != nil {
+		return err
+	}
+	return err
 }
 
 func GetHouseKeepingByUsername(username string) (data []HouseKeeping, err error) {
@@ -42,4 +51,12 @@ func GetHouseKeepingByUsername(username string) (data []HouseKeeping, err error)
 		return
 	}
 	return
+}
+
+func DeleteHouseKeeping(hkTyepe, username string) (err error) {
+	err = util.Db.Table("t_house_keeping").Where("username=?", username).Where("hk_type=?", hkTyepe).Error
+	if err != nil {
+		return err
+	}
+	return err
 }
